<resources>
    <string name="app_name">Thorne_HW05</string>
    <string name="preference_file_key">com.example.thorne_hw05.PREFERENCE_FILE_KEY</string>
    <string name="shared_pref_token_key">com.example.thorne_hw05_SHARED_PREF_TOKEN_KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="labelLogin">Login</string>
    <string name="labelCreateNewAcct">Create New Account</string>
    <string name="labelFullName">Full Name</string>
    <string name="labelSubmit">Submit</string>
    <string name="labelCancel">Cancel</string>
    <string name="hintEnterPost">Enter Post</string>
    <string name="labelCreatePost">Create Post</string>
    <string name="labelLogOut">Log Out</string>
    <string name="okay">Okay</string>
</resources>